fixed some spacing and buttons on home page

--- a/GardenationApp/Content/grayscale.less
+++ b/GardenationApp/Content/grayscale.less
@@ -243,7 +243,7 @@ a {
 }
 
 .content-section {
-    padding-top: 100px;
+    padding-top: 3em;
 }
 
 .download-section {
